# Qt_lesson_2

task_1/: CMakeLists.txt  main.cpp
